src/objects/EventArchive__c.object
<CustomObject>
    <description>Archive object for Events and Tasks removed from standard object</description>
    <fields>
        <fullName>APT_Goals__c</fullName>
        <description>Goals areas that the event record pertains to</description>
        <inlineHelpText>Please select the goals this event pertains to</inlineHelpText>
        <label>APT Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Account record</description>
        <label>Account Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EventArchives</relationshipLabel>
        <relationshipName>EventArchives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityDateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Date_History__c</fullName>
        <label>Activity Date History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_History_Sort_RPT__c</fullName>
        <label>Activity History Sort RPT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Duration_in_Hours_RPT__c</fullName>
        <label>Actual Duration in Hours RPT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appearance_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check if  Yes</inlineHelpText>
        <label>Appearance Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_to_Mandate_Override__c</fullName>
        <label>Apply to Mandate (Override)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automatically_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEP_Contact_Team_Director_Id__c</fullName>
        <label>CEP Contact Team Director Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Information_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mirrors WhatId: Link to Case Information</description>
        <label>Case Information Link</label>
        <referenceTo>Case_Information__c</referenceTo>
        <relationshipLabel>EventArchives</relationshipLabel>
        <relationshipName>EventArchives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catalog_End_Date__c</fullName>
        <description>Used with the Course Catalog search function</description>
        <label>Catalog End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClassTypeRPT__c</fullName>
        <label>ClassTypeRPT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Attended__c</fullName>
        <label>Class Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Category__c</fullName>
        <description>Passed from the Course Reg System (category field).  Used to flag events that are generated by enrollment in Mandatory Classes</description>
        <label>Class Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Counts__c</fullName>
        <label>Class Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Escorted_to_Provider__c</fullName>
        <label>Client Escorted to Provider?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Notes__c</fullName>
        <label>Clinical Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_By_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed By System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <label>Closed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mirrors WhoId: link to contact record</description>
        <label>Contact Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EventArchives</relationshipLabel>
        <relationshipName>EventArchives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_with_Other__c</fullName>
        <description>If Subject__cof APT Effort Tracking = Contact with Other, enter the Other here</description>
        <label>Contact with Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Date_Type__c</fullName>
        <label>Court Date Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Report_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if  Yes</inlineHelpText>
        <label>Court Report Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Court_Staff_Attended__c</fullName>
        <label>Court Staff Attended?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Program_Relationship__c</fullName>
        <label>Create Program Relationship?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Progress_Note__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create Progress Note?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Letter_Submitted__c</fullName>
        <label>Date Letter Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_and_Day_of_Week__c</fullName>
        <description>Date of event with day of week</description>
        <label>Date and Day of Week</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drug_Test_Results__c</fullName>
        <description>Drug Test Results are added when the task is closed via the AdministrationActionMethods from the test.drugtest record that closes the task.</description>
        <label>Drug Test Results</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationInMinutes__c</fullName>
        <label>Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventSubtype__c</fullName>
        <label>Event Subtype</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Billable_CIRT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended Billable CIRT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Event_ID__c</fullName>
        <description>Record ID for external systems (for cmis appointments, thjs will the appoint.cid field.</description>
        <externalId>true</externalId>
        <label>External Event ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstClassRPT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FirstClassRPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstClassSecondWeekRpt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FirstClassSecondWeekRpt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_home__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for APT appointments - was the therapy session in-home?</description>
        <label>In home?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAllDayEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Judge_If_other_than_Assigned_Judge__c</fullName>
        <label>Judge, If other than assigned judge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastClassRPT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LastClassRPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Update_Profile_Id__c</fullName>
        <label>Last Update Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationStd__c</fullName>
        <description>Standard SF Event field</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Follow_up__c</fullName>
        <label>Need Follow-up?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Rearrest__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A Check means no rearrest</inlineHelpText>
        <label>No Rearrest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_compliance_Type_Old__c</fullName>
        <label>Non-compliance Type Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_compliance_Type_Primary__c</fullName>
        <label>Non-compliance Type (Primary)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_compliance_Type_Secondary__c</fullName>
        <label>Non-compliance Type (Secondary)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>Number of individuals or families that attended an event.</description>
        <label>Number of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization_Account_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Record id for organization referenced in event WhatId</description>
        <label>Organization Account Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EventArchives (Organization Account Link)</relationshipLabel>
        <relationshipName>EventArchives1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>ownerid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_C_ID__c</fullName>
        <label>P/C ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <label>Participation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Cycle__c</fullName>
        <label>Program Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Relationship_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Relationship Link</label>
        <referenceTo>Program_Relationships__c</referenceTo>
        <relationshipLabel>EventArchives</relationshipLabel>
        <relationshipName>EventArchives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_arrest_Check_Completed_On__c</fullName>
        <label>Re-arrest Check Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <description>Original Record Type Id from Event object.</description>
        <label>RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Original Record Type Name from Event object.</description>
        <label>RecordTypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Address__c</fullName>
        <label>School Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serious_Non_Compliance_Old__c</fullName>
        <label>Serious Non-Compliance Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serious_Non_Compliance__c</fullName>
        <label>Serious Non-Compliance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Plan_Submitted__c</fullName>
        <label>Service Plan Submitted?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Link</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>EventArchives</relationshipLabel>
        <relationshipName>EventArchives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>QC: Originally for Salesforce Task but being re-purposed for other events. Adding case formula, starting with  &quot;Workshops and Events&quot;</description>
        <label>Short Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowAs__c</fullName>
        <label>Show Time As</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkipRestrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipRestrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not use! Prevents triggers from being fired (for data loader only).</description>
        <label>Skip Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_of_task__c</fullName>
        <label>Source of Task</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StatusCalc__c</fullName>
        <description>If task, show Status, if Court Date show Outcome, otherwise show Verification Status</description>
        <label>StatusCalc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Calc__c</fullName>
        <description>Show the relevent status field depending on whether it is a task, court date, or no court date event.</description>
        <label>StatusCalc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Event Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectRPT__c</fullName>
        <label>SubjectRPT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_source__c</fullName>
        <description>Captures the ID of the event that generated this task. Currently only used for CRS and Progress note tasks.</description>
        <label>Task source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_In__c</fullName>
        <description>Updated by system from user entry. Shows actual time in/out as opposed to native start time and end time which is the time scheduled by user when event created.</description>
        <label>Time In</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <description>Updated by system from user entry. Shows actual time in/out as opposed to native start time and end time which is the time scheduled by user when event created.</description>
        <label>Time Out</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Type__c</fullName>
        <label>Treatment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeRPT__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeStd__c</fullName>
        <description>Standard SF Type field</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mirror of  Assigned To: link to Event</description>
        <label>User Link</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EventArchives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verification_Due_Date__c</fullName>
        <label>Verification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verification_Status_History__c</fullName>
        <label>Verification Status History</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <label>Verified By</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Day__c</fullName>
        <description>Day of the week in text (Monday, Tuesday, etc.)</description>
        <label>Week Day</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <label>whatid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhoId__c</fullName>
        <label>whoid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Reason__c</fullName>
        <label>Withdrawal Reason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YYYY_MM__c</fullName>
        <description>Year and month of events and tasks for grouping by months in a year</description>
        <label>YYYY_MM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tDate__c</fullName>
        <description>DateTime field to use in formulas in place of ActivityDateTime</description>
        <label>tDate</label>
        <type>DateTime</type>
    </fields>
    <label>EventArchive</label>
    <nameField>
        <label>Legacy Event Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventArchives</pluralLabel>
    <recordTypes>
        <fullName>APT_Appointment</fullName>
        <active>true</active>
        <label>APT Appointment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>